feat: add JWT authentication with user registration and token generation

--- a/Linkify/Linkify.WebApi/appsettings.json
+++ b/Linkify/Linkify.WebApi/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LinkifyApp;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "Secret": "this-is-a-very-long-secret-key-for-jwt-tokens-in-2024-must-be-64-chars"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
