--- a/Linkify/Linkify.Application/Linkify.Application.csproj
+++ b/Linkify/Linkify.Application/Linkify.Application.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0" />
     <PackageReference Include="MediatR" Version="13.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
