feat: add React TypeScript frontend with Tailwind CSS and essential dependencies

--- a/Linkify/Linkify.Infrastructure/Linkify.Infrastructure.csproj
+++ b/Linkify/Linkify.Infrastructure/Linkify.Infrastructure.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Linkify.Application\Linkify.Application.csproj" />
     <ProjectReference Include="..\Linkify.Domain\Linkify.Domain.csproj" />
+    <ProjectReference Include="..\Linkify.Hubs\Linkify.Hubs.csproj" />
   </ItemGroup>
 
 </Project>
