feat: add React frontend foundation with basic login page and Redux setup

--- a/Linkify/Linkify.Client/tsconfig.json
+++ b/Linkify/Linkify.Client/tsconfig.json
@@ -1,7 +1,13 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "*": [ "src/*" ]
+    }
+  }
 }
