--- a/Linkify/Linkify.Client/package.json
+++ b/Linkify/Linkify.Client/package.json
@@ -15,12 +15,14 @@
     "@hookform/resolvers": "^5.2.2",
     "@microsoft/signalr": "^9.0.6",
     "@reduxjs/toolkit": "^2.10.1",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
